handeling the put method
