# backend/swagger.json
@@ -1,73 +1,39 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "Hfitness.me API",
-      "description": "API endpoints for managing clients in Hfitness application",
-      "version": "1.0.0"
-    },
-    "servers": [
-      {
-        "url": "http://localhost:3000"
-      }
-    ],
-    "paths": {
-      "/api/v1/clients": {
-        "get": {
-          "summary": "Get all clients",
-          "responses": {
-            "200": {
-              "description": "Successful operation",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/Client"
-                    }
-                  }
-                }
-              }
-            },
-            "500": {
-              "description": "Failed to get all the clients",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Error"
-                  }
-                }
-              }
-            }
-          }
-        }
-      },
-      "/api/v1//client": {
-        "post": {
-          "summary": "Create a new client",
-          "requestBody": {
-            "required": true,
+  "openapi": "3.0.0",
+  "info": {
+    "title": "Hfitness.me API",
+    "description": "API endpoints for managing clients in Hfitness application",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:3000"
+    }
+  ],
+  "paths": {
+    "/api/v1/clients": {
+      "get": {
+        "summary": "Get all clients",
+        "responses": {
+          "200": {
+            "description": "Successful operation",
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/ClientInput"
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/Client"
+                  }
                 }
               }
             }
           },
-          "responses": {
-            "201": {
-              "description": "Client created successfully"
-            },
-            "400": {
-              "description": "Invalid input"
-            },
-            "500": {
-              "description": "Failed to create the client",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "$ref": "#/components/schemas/Error"
-                  }
+          "500": {
+            "description": "Failed to get all the clients",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
                 }
               }
             }
@@ -75,88 +41,121 @@
         }
       }
     },
-    "components": {
-      "schemas": {
-        "Client": {
-          "type": "object",
-          "properties": {
-            "userId": {
-              "type": "integer"
-            },
-            "Username": {
-              "type": "string"
-            },
-            "email": {
-              "type": "string"
-            },
-            "Age": {
-              "type": "integer"
-            },
-            "Height": {
-              "type": "number",
-              "format": "decimal"
-            },
-            "Weight": {
-              "type": "number",
-              "format": "decimal"
-            },
-            "Gender": {
-              "type": "string"
-            },
-            "FitnessGoal": {
-              "type": "string"
-            },
-            "created_at": {
-              "type": "string",
-              "format": "date-time"
-            },
-            "updated_at": {
-              "type": "string",
-              "format": "date-time"
+    "/api/v1//client": {
+      "post": {
+        "summary": "Create a new client",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ClientInput"
+              }
             }
           }
         },
-        "ClientInput": {
-          "type": "object",
-          "properties": {
-            "Username": {
-              "type": "string"
-            },
-            "email": {
-              "type": "string"
-            },
-            "userpassword": {
-              "type": "string"
-            },
-            "Age": {
-              "type": "integer"
-            },
-            "Height": {
-              "type": "number",
-              "format": "decimal"
-            },
-            "Weight": {
-              "type": "number",
-              "format": "decimal"
-            },
-            "Gender": {
-              "type": "string"
-            },
-            "FitnessGoal": {
-              "type": "string"
-            }
+        "responses": {
+          "201": {
+            "description": "Client created successfully"
           },
-          "required": ["Username", "email", "userpassword"]
-        },
-        "Error": {
-          "type": "object",
-          "properties": {
-            "error": {
-              "type": "string"
+          "400": {
+            "description": "Invalid input"
+          },
+          "500": {
+            "description": "Failed to create the client",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Error"
+                }
+              }
             }
           }
         }
       }
     }
+  },
+  "components": {
+    "schemas": {
+      "Client": {
+        "type": "object",
+        "properties": {
+          "userId": {
+            "type": "integer"
+          },
+          "Username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "Age": {
+            "type": "integer"
+          },
+          "Height": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "Weight": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "Gender": {
+            "type": "string"
+          },
+          "FitnessGoal": {
+            "type": "string"
+          },
+          "created_at": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "updated_at": {
+            "type": "string",
+            "format": "date-time"
+          }
+        }
+      },
+      "ClientInput": {
+        "type": "object",
+        "properties": {
+          "Username": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
+          "userpassword": {
+            "type": "string"
+          },
+          "Age": {
+            "type": "integer"
+          },
+          "Height": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "Weight": {
+            "type": "number",
+            "format": "decimal"
+          },
+          "Gender": {
+            "type": "string"
+          },
+          "FitnessGoal": {
+            "type": "string"
+          }
+        },
+        "required": ["Username", "email", "userpassword"]
+      },
+      "Error": {
+        "type": "object",
+        "properties": {
+          "error": {
+            "type": "string"
+          }
+        }
+      }
+    }
   }
-  
+}
